# tap-playstore

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml  sample_config.json
tap_playstore/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_playstore/schemas/: earnings.json  play_balance_krw.json  reviews.json  sales_reports.json  store_performance_country.json  store_performance_traffic_source.json  subscriptions_country.json
tap_playstore/schemas/stats_by_dimension/: buyers_7d.json  crashes.json  gcm.json  installs.json  ratings.json  retained_installers.json
tap_playstore/schemas/stats_overview/: crashes.json  gcm.json  installs.json  ratings.json
tests/: __init__.py  test_core.py
